--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-crispy-forms==1.9.0
 django-filter==2.2.0
 django-model-utils==3.1.2
 django-widget-tweaks==1.4.2
+gunicorn==20.0.4
 isort==4.3.21
 kombu==4.6.8
 lazy-object-proxy==1.4.3
